cmake_minimum_required(VERSION 3.1)
project(blitz)


set(BLITZ_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BLITZ_HEADERS
    ${BLITZ_INCLUDE_DIR}/blitz/array.h
)

add_library(blitz INTERFACE)
target_compile_features(blitz INTERFACE cxx_std_11)
#target_include_directories(blitz INTERFACE $<BUILD_INTERFACE:${BLITZ_INCLUDE_DIR}>
#					   $<INSTALL_INTERFACE:include>)
target_include_directories(blitz INTERFACE ${BLITZ_INCLUDE_DIR})

#try_compile(BZ_NAMESPACES       	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/namespac.cpp)
#try_compile(BZ_EXCEPTIONS       	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/except.cpp)
#try_compile(BZ_RTTI             	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/rtti.cpp)
#try_compile(BZ_MEMBER_CONSTANTS 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/membcnst.cpp)
#try_compile(BZ_OLD_FOR_SCOPING  	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/oldfor.cpp)

#try_compile(BZ_EXPLICIT 	 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/explicit.cpp)
#try_compile(BZ_MUTABLE  	 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/mutable.cpp)
#try_compile(BZ_TYPENAME 	 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/typename.cpp)
#try_compile(BZ_NCEG_RESTRICT    	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/restrict.cpp)
#try_compile(BZ_NCEG_RESTRICT_EGCS       	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/restric2.cpp)
#try_compile(BZ_BOOL     	 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/bool.cpp)

#try_compile(BZ_CONST_CAST       	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/constcst.cpp)
#try_compile(BZ_STATIC_CAST      	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/statcast.cpp)
#try_compile(BZ_REINTERPRET_CAST 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/reinterp.cpp)
#try_compile(BZ_DYNAMIC_CAST     	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/dynamic.cpp)

#try_compile(BZ_TEMPLATES				${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/template.cpp)
#try_compile(BZ_PARTIAL_SPECIALIZATION   	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/partial.cpp)
#try_compile(BZ_PARTIAL_ORDERING 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/porder.cpp)
#try_compile(BZ_DEFAULT_TEMPLATE_PARAMETERS      	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/default.cpp)
#try_compile(BZ_MEMBER_TEMPLATES 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/membtmpl.cpp)
#try_compile(BZ_MEMBER_TEMPLATES_OUTSIDE_CLASS   	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/membtmp2.cpp)
#try_compile(BZ_FULL_SPECIALIZATION_SYNTAX       	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/fullspec.cpp)
#try_compile(BZ_FUNCTION_NONTYPE_PARAMETERS      	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/nontype.cpp)
#try_compile(BZ_TEMPLATE_QUALIFIED_BASE_CLASS    	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/elabbase.cpp)
#try_compile(BZ_TEMPLATE_QUALIFIED_RETURN_TYPE   	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/elabret.cpp)
#try_compile(BZ_EXPLICIT_TEMPLATE_FUNCTION_QUALIFICATION ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/tempqual.cpp)
#try_compile(BZ_TEMPLATES_AS_TEMPLATE_ARGUMENTS          ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/temptemp.cpp)
#try_compile(BZ_TEMPLATE_KEYWORD_QUALIFIER               ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/tempkey.cpp)
#try_compile(BZ_TEMPLATE_SCOPED_ARGUMENT_MATCHING        ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/tempqmt.cpp)
#try_compile(BZ_TYPE_PROMOTION   	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/promote.cpp)
#try_compile(BZ_USE_NUMTRAIT     	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/numtrait.cpp)
#try_compile(BZ_ENUM_COMPUTATIONS			${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/enumcomp.cpp)
#try_compile(BZ_ENUM_COMPUTATIONS_WITH_CAST              ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/enumcmp2.cpp)

#try_compile(BZ_HAVE_COMPLEX     	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/complex.cpp)
#try_compile(BZ_HAVE_NUMERIC_LIMITS      	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/numlimit.cpp)
#try_compile(BZ_HAVE_CLIMITS     	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/climits.cpp)
#try_compile(BZ_HAVE_VALARRAY    	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/valarray.cpp)
#try_compile(BZ_HAVE_COMPLEX_MATH			${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/compmath.cpp)
#try_compile(BZ_HAVE_IEEE_MATH   	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/ieeemath.cpp)
#try_compile(BZ_HAVE_SYSTEM_V_MATH       	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/sysvmath.cpp)
#try_compile(BZ_MATH_FN_IN_NAMESPACE_STD 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/mathscop.cpp)
#try_compile(BZ_COMPLEX_MATH_IN_NAMESPACE_STD    	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/cmthscop.cpp)
#try_compile(BZ_HAVE_STD 	 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/std.cpp)
#try_compile(BZ_HAVE_STL 	 	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/stl.cpp)
#try_compile(BZ_HAVE_RUSAGE      	 	 	${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/compiler/getruse.cpp)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/bzconfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/bzconfig.h)
install(FILES ${BLITZ_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/blitz)
